# Multi-query-RAG-system

./: main.py  pyproject.toml  requirements.txt
chroma_db/4ec8cc00-3d15-4250-9123-e857e30ffec4/: index_metadata.pickle
eval/: basic_eval.py  comparison_report.html  eval_set.json  restore_results.py  results.json  results_expanded.json  run_eval.py  score.py
rag/: embeddings.py  generator.py  loader.py  pipeline.py  query_expansion.py  retriever.py  splitter.py  vectordb.py
