[project]
name = "rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.0.0",
    "google-genai",
    "langchain>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=5.0.0",
    "umap-learn>=0.5.7",
]
